[tool.poetry]
name = "cam_dance_pad"
version = "0.1.0"
description = "Uses the camera to create a dance pad"
authors = ["Tomer Keren <tomer.keren.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
opencv = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
