[tool.poetry]
name = "cam_dance_pad"
version = "0.1.0"
description = "Uses the camera to create a dance pad"
authors = ["Tomer Keren <tomer.keren.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.1.2"

[tool.poetry.dev-dependencies]
ipython = "^7.11.1"
pre-commit = "^1.21.0"
black = "^19.10b0"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
